export interface ICreateGuestbookEntryRequest {
  email: string
  content: string
}
