export interface IDomainEvent {}
