export interface IEntity {
  id: string
}
