import { IRepository } from "../common"

import { Guestbook } from "./Guestbook"

export interface IGuestbookRepository extends IRepository<Guestbook> {}
